Fix overlay cue button z-index issue

--- a/src/client/styles/themes/_grid-layouts.sass
+++ b/src/client/styles/themes/_grid-layouts.sass
@@ -5,7 +5,12 @@ body.layout-overlay
 			padding: 0
 
 			button.cue
+				z-index: 1
 				right: 4px
+
+				&:hover~header
+					opacity: 1
+
 
 			header
 				margin-top: 0
